force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>Appointments related  to Treatments such as Apheresis, Plant or Infusion</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>