force-app/main/default/objects/Appointment__c/fields/ADF_Status__c.field-meta.xml
<CustomField>
    <fullName>ADF_Status__c</fullName>
    <description>ADF Status</description>
    <inlineHelpText>ADF Status</inlineHelpText>
    <label>ADF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approval_Status</valueSetName>
    </valueSet>
</CustomField>