force-app/main/default/objects/Appointment__c/fields/ADFSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>ADFSubmittedDate__c</fullName>
    <description>ADF Submitted Date</description>
    <inlineHelpText>ADF Submitted Date</inlineHelpText>
    <label>ADF Submitted Date</label>
    <type>DateTime</type>
</CustomField>