force-app/main/default/objects/Appointment__c/fields/Apheresis_Center__c.field-meta.xml
<CustomField>
    <fullName>Apheresis_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Apheresis Center</description>
    <inlineHelpText>Apheresis Center</inlineHelpText>
    <label>Apheresis Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Apheresis Center)</relationshipLabel>
    <relationshipName>Appointments4</relationshipName>
    <type>Lookup</type>
</CustomField>