force-app/main/default/objects/Appointment__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <inlineHelpText>Appointments Date either for APH Pick, Plant Start or INF Delivery</inlineHelpText>
    <label>Appointment Date</label>
    <type>DateTime</type>
</CustomField>