force-app/main/default/objects/Appointment__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <description>Approver Comments</description>
    <inlineHelpText>Approver Comments</inlineHelpText>
    <label>Approver Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>