force-app/main/default/objects/Appointment__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Appointment counter</inlineHelpText>
    <label>Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>