force-app/main/default/objects/Appointment__c/fields/ExternalIdIntegration__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdIntegration__c</fullName>
    <description>External Id for active appointments used by integration
format: [&#39;APH&#39;,&#39;PLANT&#39;,&#39;INF&#39;]_{!Case.TreatmentKey}</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for integrations</inlineHelpText>
    <label>External Id Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>