force-app/main/default/objects/Appointment__c/fields/HCP__c.field-meta.xml
<CustomField>
    <fullName>HCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HCP</description>
    <inlineHelpText>HCP</inlineHelpText>
    <label>HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>