force-app/main/default/objects/Appointment__c/fields/Infusion_Center__c.field-meta.xml
<CustomField>
    <fullName>Infusion_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Infusion Center</description>
    <inlineHelpText>Infusion Center</inlineHelpText>
    <label>Infusion Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Infusion Center)</relationshipLabel>
    <relationshipName>Appointments7</relationshipName>
    <type>Lookup</type>
</CustomField>