force-app/main/default/objects/Appointment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True indicates that treatment is the currently active one of this type</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>