force-app/main/default/objects/Appointment__c/fields/NVSOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>NVSOrderNumber__c</fullName>
    <inlineHelpText>Purchase, Process or Sales Order Number</inlineHelpText>
    <label>NVS Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>