force-app/main/default/objects/Appointment__c/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pickup Location</description>
    <inlineHelpText>Pickup Location</inlineHelpText>
    <label>Pickup Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Pickup Location)</relationshipLabel>
    <relationshipName>Appointments5</relationshipName>
    <type>Lookup</type>
</CustomField>