force-app/main/default/objects/Appointment__c/fields/PlannedOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>PlannedOrderNumber__c</fullName>
    <label>Planned Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>