force-app/main/default/objects/Appointment__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purpose</label>
    <referenceTo>Purpose__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>