force-app/main/default/objects/Appointment__c/fields/ShipToLocation__c.field-meta.xml
<CustomField>
    <fullName>ShipToLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ShipToLocation</description>
    <inlineHelpText>ShipToLocation</inlineHelpText>
    <label>ShipToLocation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (ShipToLocation)</relationshipLabel>
    <relationshipName>Appointments6</relationshipName>
    <type>Lookup</type>
</CustomField>