force-app/main/default/objects/Appointment__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Site</description>
    <inlineHelpText>Site</inlineHelpText>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Site)</relationshipLabel>
    <relationshipName>Appointments2</relationshipName>
    <type>Lookup</type>
</CustomField>