force-app/main/default/objects/Appointment__c/fields/Status_Apheresis_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Status_Apheresis_Pickup__c</fullName>
    <label>Status - Apheresis Pickup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apheresis - Waiting Confirmation</fullName>
                <default>true</default>
                <label>Apheresis - Waiting Confirmation</label>
            </value>
            <value>
                <fullName>Apheresis - Planned Pickup</fullName>
            </value>
            <value>
                <fullName>Apheresis Material - Goods Received</fullName>
            </value>
            <value>
                <fullName>Apheresis Material - Goods Receipt Reversed</fullName>
            </value>
            <value>
                <fullName>Apheresis - Picked up</fullName>
            </value>
            <value>
                <fullName>Apheresis - Pickup Cancelled</fullName>
            </value>
            <value>
                <fullName>Apheresis - Batch Released</fullName>
            </value>
            <value>
                <fullName>Apheresis - Batch Release Reversed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>