force-app/main/default/objects/Appointment__c/fields/Status_Apheresis_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Status_Apheresis_Procedure__c</fullName>
    <label>Status - Apheresis Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apheresis - To be confirmed</fullName>
                <default>true</default>
                <label>Apheresis - To be confirmed</label>
            </value>
            <value>
                <fullName>Apheresis - Completed</fullName>
            </value>
            <value>
                <fullName>Apheresis - Interrupted</fullName>
            </value>
            <value>
                <fullName>Apheresis - Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>