force-app/main/default/objects/Appointment__c/fields/Status_Overall_Infusion__c.field-meta.xml
<CustomField>
    <fullName>Status_Overall_Infusion__c</fullName>
    <label>Status - Overall Infusion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Infusion - Not Started</fullName>
                <default>true</default>
                <label>Infusion - Not Started</label>
            </value>
            <value>
                <fullName>Infusion - In Progress</fullName>
            </value>
            <value>
                <fullName>Infusion - Completed</fullName>
            </value>
            <value>
                <fullName>Infusion - Interrupted</fullName>
            </value>
            <value>
                <fullName>Infusion - Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>