force-app/main/default/objects/Appointment__c/fields/Status_Overall_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Status_Overall_Treatment__c</fullName>
    <label>Status - Overall Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>