force-app/main/default/objects/Appointment__c/fields/Status_Plant_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Status_Plant_Appointment__c</fullName>
    <label>Status - Plant Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Allocated - Waiting Confirmation</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Reserved - Waiting Confirmation</fullName>
            </value>
            <value>
                <fullName>Reserved - Rejected</fullName>
            </value>
            <value>
                <fullName>Reserved - Approved</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>