force-app/main/default/objects/Appointment__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team</description>
    <inlineHelpText>Team</inlineHelpText>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appointments (Team)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>