force-app/main/default/objects/Appointment__c/fields/Wizard__c.field-meta.xml
<CustomField>
    <fullName>Wizard__c</fullName>
    <label>Wizard</label>
    <length>40</length>
    <type>Text</type>
</CustomField>