force-app/main/default/objects/Appointment__c/recordTypes/Apheresis.recordType-meta.xml
<RecordType>
    <fullName>Apheresis</fullName>
    <active>true</active>
    <description>Apheresis Appointment for extracting patients blood/cells</description>
    <label>Apheresis Appointment</label>
</RecordType>