force-app/main/default/objects/Appointment__c/recordTypes/Infusion.recordType-meta.xml
<RecordType>
    <fullName>Infusion</fullName>
    <active>true</active>
    <description>Appointment for Infusion of engineered blood into the patient</description>
    <label>Infusion Appointment</label>
</RecordType>