force-app/main/default/objects/Appointment__c/recordTypes/Plant.recordType-meta.xml
<RecordType>
    <fullName>Plant</fullName>
    <active>true</active>
    <description>Plant Appointment for processing the patients blood (Cell Processing)</description>
    <label>Plant Appointment</label>
</RecordType>